--- a/notebooks/01_EDA_Preprocessing_Energy.ipynb
+++ b/notebooks/01_EDA_Preprocessing_Energy.ipynb
@@ -40,7 +40,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Load dataset\n",
-    "df = pd.read_csv('D:/Documents/Courses/Data Science/TimeSeries_Forcasting_Project/data/opsd_germany_daily.csv')\n",
+    "df = pd.read_csv('.../data/opsd_germany_daily.csv')\n",
     "\n",
     "# Preview\n",
     "print(df.shape)\n",
@@ -235,7 +235,7 @@
     "feature_names = X.columns.tolist()\n",
     "\n",
     "# Save to processed folder\n",
-    "joblib.dump((X_train, X_test, y_train, y_test, feature_names), 'D:/Documents/Courses/Data Science/TimeSeries_Forcasting_Project/data/processed/processed_data.pkl')"
+    "joblib.dump((X_train, X_test, y_train, y_test, feature_names), '.../data/processed/processed_data.pkl')"
    ]
   },
   {
