--- a/notebooks/02_Modeling_and_Evaluation_Energy.ipynb
+++ b/notebooks/02_Modeling_and_Evaluation_Energy.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# 1. Load Processed Data\n",
     "import joblib\n",
-    "X_train, X_test, y_train, y_test, feature_names = joblib.load('D:/Documents/Courses/Data Science/TimeSeries_Forcasting_Project/data/processed/processed_data.pkl')"
+    "X_train, X_test, y_train, y_test, feature_names = joblib.load('.../data/processed/processed_data.pkl')"
    ]
   },
   {
